--- a/2025/Spring/Numerical_Analysis/Assignment 3/homework3.ipynb
+++ b/2025/Spring/Numerical_Analysis/Assignment 3/homework3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -21,18 +21,41 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n=2: 9.44812849972556\n",
+      "n=3: 14.578313807966747\n",
+      "n=4: 6.0146641349174175\n",
+      "n=5: 4.542943075714791\n",
+      "n=6: 3.223866268318519\n",
+      "n=7: 1.6050704629223738\n",
+      "n=8: 1.7715561859772926\n",
+      "n=9: 0.5261660068639532\n",
+      "n=10: 0.9443828548168898\n",
+      "n=11: 0.15950340156974002\n",
+      "n=12: 0.5080658718965724\n",
+      "n=13: 0.03270005670481878\n",
+      "n=14: 0.28084279548824936\n",
+      "n=15: 0.01811222321523276\n",
+      "n=16: 0.1434188405571975\n",
+      "n=17: 0.023302334211891707\n",
+      "n=18: 0.07721248234164346\n",
+      "n=19: 0.022064699698631653\n",
+      "n=20: 0.03636788952085353\n"
+     ]
     }
    ],
    "source": [
+    "\n",
     "import numpy as np\n",
-    "\n",
     "from scipy.interpolate import CubicSpline\n",
-    "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "def runge(x: float) -> float:\n",
     "    return 1 / (1 + 25 * x**2)\n",
-    "\n",
     "\n",
     "errors = [] \n",
     "steps = range(2,21)\n",
@@ -61,7 +84,10 @@
     "ax.set_xticks(steps)    \n",
     "ax.legend(loc='best', ncol=2)\n",
     "\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "for i,e in enumerate(errors):\n",
+    "    print(f\"n={steps[i]}: {e}\")"
    ]
   }
  ],
